# tz-experiments

./: .gitignore  Dockerfile  NW_log.txt  README.md  SW_log.txt  build.sh  run-ATF-only.sh
optee_examples/tests/: CMakeLists.txt  Makefile  results.txt
optee_examples/tests/common/: common.h
optee_examples/tests/host/: Makefile  main.c  main.h  main_host.c  micro_bench.c  micro_bench.h  ocaml.c  results.txt  secure_fs_interface.c  secure_fs_interface.h  ukvm.h  ukvm_core.c  ukvm_guest.h
optee_examples/tests/host/libcamlrun_byte/: bigarray.c  gc_ctrl.c  major_gc.c  memory.c  misc.c  obj.c  startup.c  startup_aux.c
optee_examples/tests/net/: Makefile  net_enclave.c  ocalls_compat.c  ping_test.c  sub.mk  sub.mk.tmp  unsupported-libc.c  user_ta_header_defines.h
optee_examples/tests/net/extera_include/: pico_config.h  pico_constants.h  pico_defines.h
optee_examples/tests/net/include/: net_enclave.h  ocalls_compat.h  pico_config.h  unsupported-libc.h
optee_examples/tests/net/modules/: pico_dev_ppp.c  pico_dev_tap.c  sub.mk  (+7 more)
optee_examples/tests/ta/: Makefile  main_ta.c  sub.mk  test_bmfs.c  test_bmfs.h  test_libm.c  user_ta_header_defines.h
optee_examples/tests/tcrypt/: Makefile  blake2s-ref.c  curve25519.c  poly1305.c  siphash.c  sub.mk  tcrypt.c  user_ta_header_defines.h
optee_examples/tests/tfs/: test_bmfs.c  tfs.c
optee_examples/tests/tui/: Makefile  sub.mk  tee_tui.c  tui.c  tui_entry.c  tui_keyboard.c  tui_private.h  tui_pta.c  tui_widget.c  user_ta_header_defines.h
optee_examples/tests/tz-solo5/: GNUmakefile  Makeconf  Makefile.common  pre-install.sh
(+930 files in other folders)
